<resources>
    <string name="app_name">BloodDonorFrontend</string>
    <string name="nav_home">Home</string>
    <string name="nav_find">Find</string>
    <string name="nav_record" />
    <string name="nav_rec">Record</string>
    <string name="nav_profile">Profile</string>


    <!--question-->
    <string name="q1">อยู่ในระหว่างตั้งครรภ์</string>
    <string name="q2">คลอดบุตรในอีกระยะเวลาโปรดระบุ (เดือน)</string>
    <string name="q3">อยู่ในระยะให้นมบุตร</string>
    <string name="q4">คลอดบุตรหรือแท้งใน 6 เดือนที่ผ่านมา</string>
    <string name="q5">ท่านมีเพศสัมพันธ์กับคนที่ไม่ใช่คู่ของท่าน</string>
    <string name="q6">ท่ามีความสัมพันธ์กับเพศเดียวกัน</string>
    <string name="q7">คู่ของท่านมีเพศสัมพันธ์กับผู้อื่น</string>
    <string name="q8">คู่ของท่านมีเพศสัมพันธ์กับเพศเดียวกัน</string>
    <string name="q9">ท้องเสียท้องร่วงในระยะ 7 วันที่ผ่านมา</string>
    <string name="q10">น้ำหนักลดอย่างรวดเร็วไม่ทราบสาเหตุ</string>
    <string name="q11">ถอนฟัน อุดหินปูน ใน 3 วันที่ผ่านมา</string>
    <string name="q12">ได้รับการผ่าตัดเล็กในระยะเวลา 7 วันที่ผ่านมา</string>
    <string name="q13">ได้รับการผ่าตัดใหญ่ในระยะเวลา 6 เดือนที่ผ่านมา</string>
    <string name="q14">มีอาการมึนเมาจากการดื่มแอลกอฮอล์ หรือสารอื่น ๆ </string>
    <string name="q15">เคยมีประวัติยาเสพติด หรือ เพิ่งพ้นโทษในระยะ 3 ปี </string>
    <string name="q16">เคยเจ็บป่วยต้องรับโลหิตของผู้อื่นใน 12 เดือนที่ผ่านมา</string>
    <string name="q17">เข้าไปพื้นที่มาลาเรียในระยะเวลา 12 เดือนที่ผ่านมา</string>
    <string name="q18">ป้วยเป็นมาเลเรียในระยะ 3 ปีที่ผ่านมา</string>
    <string name="q19">เคยเจ็บป่วยและต้องรับโลหิตที่อังกฤษช่วงปี 2523 - 2539</string>
    <string name="q20">เคยพำนักอยู่ที่ประเทศอังกฤษ่วงปี 2523 - 2539 เป็นระยะ 6 เดือนขึ้นไป</string>
    <string name="q21">สุขภาพแข็งแรงและนอนเพียงพอ</string>
    <string name="q22">เพิ่งรับประทานอาหารที่มีไขมันสูงภายใน 6 ชั่วโมง</string>
    <string name="q23">เจาะหูหรือวัยวะอื่น ๆ สัก ลบรอยสัก ฝังเข็ม</string>
    <string name="q23_1">เจาะ สัก ลบรอยสัก ฝังเข็ม ด้วยวิธีสะอาด</string>
    <string name="q23_2">เจาะ สัก ลบรอยสัก ฝังเข็ม มานานกว่า  1 ปี</string>
    <string name="q24">เคยรับวัคซันป้องกันโรคภายใน 2 เดือน</string>
    <string name="q25">เคยรับเซร่มภายใน 1 ปี</string>
    <string name="q26">รับประทานยาในกลุ่มของ ยาแอสไพริน</string>
    <string name="q27">รับทานยาแก้อักเสบ</string>
    <string name="q28">เคยเป็นโรคตับอักเสบ</string>
    <string name="q29">เคยเป็นโรคตับอักเสบก่อนอายุ 11 ปี</string>
    <string name="q30">คนในครอบครัวเป็นตักอักเสบในช่วง 6 เดือนที่ผ่านมา</string>
    <string name="q31">คุณเคยเป็นโรคหอบหืด ลมชัก โรคผิวหนังเรื้อรัง ไอเรื้อรัง วัณโรค ภูมิแพ้ โรคความดันโลหิตสูง เบาหวาน หัวใจ ไทรอยด์ มะเร็ว โลหิตไหลง่าย</string>
    <string name="q32">อื่น ๆ โปรดระบุ</string>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

</resources>
